# DEF-attackvla

./: .env.serve  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
benchmarks/: README.md  backend_smoke.py  defense_latency.py
configs/: debug.toml  (+6 more)
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/: README.md  pyproject.toml  requirements.txt  robo_env.yml  run_robogcg.sh
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/experiments/defenses/: constants.py  test_perplexity.py
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/experiments/defenses/utils/: vla_perplexity_filter.py
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/experiments/models/: __init__.py
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/experiments/models/OpenVLA/: modeling_prismatic.py
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/experiments/models/Pi0_fast/: configuration_prismatic.py  modelling_pi.py
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/experiments/single_step/: config.py  experiment_runner.py  model_utils.py  run_experiment.py  run_persistence.py  trace_experiment.py  utils.py
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/roboGCG/examples/: test.py
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/roboGCG/robogcg/: multi_robo_gcg.py  robo_gcg.py
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/robogcg.egg-info/: PKG-INFO  requires.txt  top_level.txt
repositories/AttackVLA/Pi0-Fast/robogcg_pi0_fast/scripts/: run_ensemble_transfer.sh  run_gcg_experiment.sh  run_perplexity_defense.sh  run_persistence_experiment.sh
(+888 files in other folders)
