[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "anima-def-attackvla"
version = "0.1.0"
description = "ANIMA defense scaffold for AttackVLA benchmark hardening"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=2.0.0",
  "pydantic>=2.9.0",
  "pyyaml>=6.0.2",
  "tomli-w>=1.0.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anima_def_attackvla"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
